backend/proxy/http-to-htts-redirect-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: default
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redirect-to-https
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-to-https@kubernetescrd

spec:
  rules:
    - host: phoqer.com
      http:
        paths:
          - backend:
              service:
                name: frontend
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
