backend/proxy/phoqer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phoqer-ingress
  annotations:
    cert-manager.io/issuer: "letsencrypt-issuer"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
   - hosts:
       - phoqer.com
       - api.phoqer.com
     secretName: tls-phoqer-ingress-http
  rules:
    - host: phoqer.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: http
    - host: api.phoqer.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  name: http
